# trustdevice-android

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle  jitpack.yml  local.properties  settings.gradle
.github/workflows/: android.yml  release.yml
app/: build.gradle  demo_release.jks  trustdevcie_demo.jks
app/src/main/: AndroidManifest.xml
app/src/main/assets/: PrivacyPolicy.html
app/src/main/res/drawable/: build_info_background.xml  detail_item_divider.xml  ic_back.xml  ic_battery.xml  ic_down_arrow.xml  ic_installed_app.xml  ic_internal_storage.xml  ic_phone.xml  ic_random_access_memory.xml  ic_sensor_accelerometer.xml  ic_sensor_all.xml  ic_sensor_gravity.xml  ic_sensor_gyroscope.xml  ic_sensor_heartrate.xml  ic_sensor_hinge.xml  ic_sensor_humidity.xml  ic_sensor_light.xml  ic_sensor_magnetic_field.xml  ic_sensor_motion.xml  ic_sensor_next.xml  ic_sensor_orientation.xml  ic_sensor_pressure.xml  ic_sensor_private.xml  ic_sensor_proximity.xml  ic_sensor_step.xml  ic_sensor_temperature.xml  ic_sensor_tilt.xml  ic_setting.xml  ic_up_arrow.xml  item_card_background.xml
fastlane/metadata/android/en-US/: full_description.txt  short_description.txt
gradle/wrapper/: gradle-wrapper.properties
trustdevice/: build.gradle  consumer-rules.pro  proguard-rules.pro
trustdevice/src/main/cpp/: CMakeLists.txt  detection_risk.cpp  detection_risk.h  native-lib.cpp  trustdevice.cpp  trustdevice_risk.cpp  trustdevice_risk.h  trustdevice_utils.cpp  trustdevice_utils.h  utils.cpp  utils.h
trustdevice/src/main/cpp/common/: logger.h  macro.h
(+153 files in other folders)
